# test-rkyv

./: .gitignore  Cargo.toml  README.md  justfile
src/: lib.rs
